<resources>
    <string name="app_name">Morse Code</string>
    <string name="dash">-</string>
    <string name="slash">/</string>
    <string name="dot">.</string>
    <string name="space"> </string>
    <string name="placeholder">Your morse code will be displayed here</string>
    <string name="submit">Submit</string>
    <string name="backspace">back</string>
    <string name="clear">clear</string>
    <string name="first_nav">Translate from Morse</string>
    <string name="second_nav">Translate to Morse</string>
    <string name="third_nav">Alphabet</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="regularText">Enter a message to translate</string>
    <string name="transPlaceholder">Your translation will appear here.</string>
</resources>
