<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.piejak.morsecode.fromMorse">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="io.github.piejak.morsecode.MainActivity"
        android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="io.github.piejak.morsecode.MainActivity"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/regularText"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:id="@+id/regularText"
            android:textSize="18sp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:onClick="submitToMorse"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="15sp"
            />


    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transPlaceholder"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:id="@+id/transPlaceholder"
            />

    </LinearLayout>



</FrameLayout>
